# BiblioGraph

./: .gitignore  Bigtestdata.h  CMakeLists.txt  CMakeLists.txt.user.5e0fe91  CMakeLists.txt.user.99df148  Darkeum.qss  Datafile.cpp  README.md  adj_listwindow.cpp  adj_listwindow.h  adj_listwindow.ui  algorithms.inl  bfs.inl  clique.cpp  clique.h  cliquepar.cpp  dataclass.cpp  dataclass.h  datafile.h  dfcycle.cpp  dfs.inl  eccenticity.inl  graph.h  graph.inl  incidmatrix.cpp  incidmatrix.h  incidmatrix.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  matrixwindow.cpp  matrixwindow.h  matrixwindow.ui  multrepreswindow.cpp  multrepreswindow.h  multrepreswindow.ui  newwin.h  point.h  propertieswindow.cpp  (+6 more)
GraphLibrary/: CMakeLists.txt  Coloring.inl  algorithms.inl  bfs.inl  clique.cpp  clique.h  cliquepar.cpp  coloring.inl  dfcycle.cpp  dfs.inl  eccenticity.inl  euler.inl  graph.h  graph.inl  hamilton.inl  independence.inl  timer.h  tree.inl  сoloring.inl
